src/discrete-layer/components/layer-details/layer-details-form.css
#layerDetailsForm .form {
  max-height: 880px !important;
}

#layerDetailsForm .curtain {
  position: absolute;
  width: 100%;
  background-color: #000;
  opacity: 0.3;
  border-radius: 10px;
  z-index: 4;
  margin-bottom: -40%;
  top: 0;
  left: 0;
  bottom: 0;
}

#layerDetailsForm .content {
  max-height: var(--content-height);
  overflow-y: auto;
  padding: 20px;
  position: relative;
}

#layerDetailsForm .content.curtainVisible {
  overflow: hidden;
}

#layerDetailsForm .section {
  border: 1px solid var(--mdc-theme-gc-selection-background, #fff);
  border-radius: 10px;
}

#layerDetailsForm .header.section {
  height: var(--ingestion-fields-height);
}

#layerDetailsForm .footer {
  display: flex;
  margin-top: var(--footer-offset);
  width: 100%;
  height: var(--footer-height);
}

body[dir='rtl'] #layerDetailsForm .footer {
  left: 20px;
}

#layerDetailsForm .buttons {
  display: flex;
  gap: 20px;
  align-items: center;
  margin-left: auto;
}

body[dir='rtl'] #layerDetailsForm .buttons {
  margin-left: unset;
  margin-right: auto;
}

#layerDetailsForm .messages {
  display: flex;
  flex-direction: column;
  height: 60px;
  overflow-y: auto;
}

#layerDetailsForm .ingestionWarning {
  display: flex;
  flex-direction: row;
}

.warningIcon {
  font-size: 32px;
  padding: 8px 0;
}

.warningMessage {
  padding: 0 12px;
}

.warning.mdc-form-field label {
  color: var(--mdc-theme-gc-warning-high);
}

